--- a/AirlineTweetsClassificationwithBERT.ipynb
+++ b/AirlineTweetsClassificationwithBERT.ipynb
@@ -392,6 +392,43 @@
     "plt.title('Confusion Matrix')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "145e8c52-1ceb-491a-b62c-793ac9d37bf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sns\n",
+    "def plot_cm(y_true, y_pred, figsize=(15, 15)):\n",
+    "    cm = confusion_matrix(y_true, y_pred, labels=np.unique(y_true))\n",
+    "    cm_sum = np.sum(cm, axis=1, keepdims=True)\n",
+    "    cm_perc = cm / cm_sum.astype(float) * 100\n",
+    "    annot = np.empty_like(cm).astype(str)\n",
+    "    nrows, ncols = cm.shape\n",
+    "    for i in range(nrows):\n",
+    "        for j in range(ncols):\n",
+    "            c = cm[i, j]\n",
+    "            p = cm_perc[i, j]\n",
+    "            if i == j:\n",
+    "                s = cm_sum[i]\n",
+    "                annot[i, j] = '%.1f%%\\n%d/%d' % (p, c, s)\n",
+    "            elif c == 0:\n",
+    "                annot[i, j] = ''\n",
+    "            else:\n",
+    "                annot[i, j] = '%.1f%%\\n%d' % (p, c)\n",
+    "    cm = pd.DataFrame(cm, index=np.unique(y_true), columns=np.unique(y_true))\n",
+    "    cm.index.name = 'Actual'\n",
+    "    cm.columns.name = 'Predicted'\n",
+    "    fig, ax = plt.subplots(figsize=figsize)\n",
+    "    sns.heatmap(cm, cmap= \"YlGnBu\", annot=annot, fmt='', ax=ax)\n",
+    "df_eval = pd.DataFrame({'y_true': y_valid, 'y_preds': y_preds})\n",
+    "df_eval['y_true'] = (df_eval['y_true'].apply(label_int2str))\n",
+    "df_eval['y_preds'] = (df_eval['y_preds'].apply(label_int2str))\n",
+    "plot_cm(df_eval['y_true'], df_eval['y_preds'])"
+   ]
   }
  ],
  "metadata": {
