--- a/AirlineTweetsClassificationwithBERT.ipynb
+++ b/AirlineTweetsClassificationwithBERT.ipynb
@@ -396,6 +396,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00abb8d6-83fa-4dbf-b42c-9f81c454c2d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from sklearn import metrics\n",
+    " \n",
+    "y_preds = []\n",
+    "y_trues = []\n",
+    "for index,val_text in enumerate(val_texts):\n",
+    "     tokenized_val_text = tokenizer([val_text], \n",
+    "                                    truncation=True,\n",
+    "                                    padding=True,\n",
+    "                                    return_tensor='pt')\n",
+    "     logits = model(tokenized_val_text)\n",
+    "     prediction = F.softmax(logits, dim=1)\n",
+    "     y_pred = torch.argmax(prediction).numpy()\n",
+    "     y_true = val_labels[index]\n",
+    "     y_preds.append(y_pred)\n",
+    "     y_trues.append(y_true)\n",
+    "Finally,\n",
+    "\n",
+    "confusion_matrix = metrics.confusion_matrix(y_trues, y_preds, labels=[\"neg\", \"pos\"]))\n",
+    "print(confusion_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "145e8c52-1ceb-491a-b62c-793ac9d37bf2",
    "metadata": {},
    "outputs": [],
