--- a/AirlineTweetsClassificationwithBERT.ipynb
+++ b/AirlineTweetsClassificationwithBERT.ipynb
@@ -459,6 +459,27 @@
     "df_eval['y_preds'] = (df_eval['y_preds'].apply(label_int2str))\n",
     "plot_cm(df_eval['y_true'], df_eval['y_preds'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53b3c402-4861-48b2-9a98-ddaa91f1bfa1",
+   "metadata": {},
+   "source": [
+    "#### Brief Explanation\n",
+    "\n",
+    "##### Transformer Model Architecture\n",
+    "\n",
+    "For the classification of airline tweets, we chose the BERT (Bidirectional Encoder Representations from Transformers) model. BERT is a transformer-based model that uses a bidirectional approach to pre-train language representations. It is designed to understand the context of a word based on its surroundings both before and after the word, which is achieved through its bidirectional training method. The BERT model consists of multiple layers of encoders, each with self-attention mechanisms, allowing it to capture intricate patterns in the text.\n",
+    "\n",
+    "##### Model Modifications\n",
+    "\n",
+    "To optimize the BERT model for the specific task of classifying airline tweets, we made several modifications:\n",
+    "1. **Freezing Layers**: We froze the initial layers of the BERT model to retain the pre-trained weights and reduce the computational load. This allows the model to leverage the general language understanding from the pre-trained layers while fine-tuning the later layers for the specific classification task.\n",
+    "2. **Adjusting Learning Rates**: We experimented with different learning rates and found that a lower learning rate for the pre-trained layers and a slightly higher learning rate for the newly added classification layer helped in achieving better performance. This approach, known as layer-wise learning rate decay, ensures that the model fine-tunes effectively without catastrophic forgetting.\n",
+    "3. **Adding a Classification Head**: We appended a fully connected dense layer on top of BERT's pooled output to serve as the classification head. This layer maps the output representations to the desired number of classes (e.g., positive, negative, neutral sentiments).\n",
+    "\n",
+    "By implementing these modifications, we were able to enhance the performance of the BERT model for the task of airline tweet classification, ensuring accurate and efficient sentiment analysis."
+   ]
   }
  ],
  "metadata": {
