--- a/AirlineTweetsClassificationwithPretrainedTransformer.ipynb
+++ b/AirlineTweetsClassificationwithPretrainedTransformer.ipynb
@@ -118,6 +118,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f1aeacd9-9740-4587-bbc4-4b0a10275bd9",
+   "metadata": {},
+   "source": [
+    "##### The following code snippet provided in the course materials (Useful Code of the Lesson). Hyperparameters and architecture adjusted to improve performance and achieve the best results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "127fc724-09b1-4c9b-b531-50e727b87dd1",
@@ -219,7 +227,7 @@
     "y_val_encoded = torch.tensor(y_val_encoded)\n",
     "\n",
     "# Define batch size\n",
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "\n",
     "# Create TensorDatasets\n",
     "train_dataset = TensorDataset(bert_train['input_ids'], bert_train['attention_mask'], y_train_encoded)\n",
@@ -235,8 +243,16 @@
     "                'bert.encoder.layer.5']\n",
     "\n",
     "# Unfreeze the parameters of the classification head except the above\n",
-    "for name, param in bert_model.named_parameters():\n",
-    "    param.requires_grad = not any(name.startswith(prefix) for prefix in param_freeze)"
+    "#for name, param in bert_model.named_parameters():\n",
+    "#    param.requires_grad = not any(name.startswith(prefix) for prefix in param_freeze)\n",
+    "\n",
+    "# Freeze the first 10 layers of the encoder\n",
+    "#for param in model.model.encoder.layers[:10].parameters():\n",
+    "#    param.requires_grad = False\n",
+    "\n",
+    "# Unfreeze the last few layers for fine-tuning\n",
+    "#for param in model.model.encoder.layers[10:].parameters():\n",
+    "#    param.requires_grad = True"
    ]
   },
   {
@@ -248,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "'For batch \"3\": Training - Loss: 0.702, F1 Score: 0.000'"
+       "'For batch \"9\": Training - Loss: 0.723, F1 Score: 0.000'"
       ]
      },
      "metadata": {},
@@ -263,8 +279,13 @@
     "# Define the number of epochs\n",
     "num_epochs = 20\n",
     "\n",
+    "optimizer_grouped_parameters = [\n",
+    "    {'params': bert_model.bert.encoder.layer[i].parameters(), 'lr': 1e-5 / (i + 1)}\n",
+    "    for i in range(len(bert_model.bert.encoder.layer))\n",
+    "]\n",
+    "optimizer = Adam(optimizer_grouped_parameters, lr=1e-5)\n",
     "# Prepare optimizer and loss function\n",
-    "optimizer = Adam(bert_model.parameters(), lr=1e-5)\n",
+    "#optimizer = Adam(bert_model.parameters(), lr=1e-5)\n",
     "\n",
     "# Set up the ReduceLROnPlateau scheduler\n",
     "scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.1, patience=3)\n",
@@ -294,7 +315,11 @@
     "\n",
     "# Training loop\n",
     "for epoch in range(num_epochs):\n",
-    "    bert_model.train()\n",
+    "    # Unfreeze each layer progressively\n",
+    "    for layer in bert_model.bert.encoder.layer:\n",
+    "        for param in layer.parameters():\n",
+    "            param.requires_grad = True\n",
+    "        bert_model.train()\n",
     "    total_loss = 0\n",
     "    total_f1 = 0\n",
     "    cnt = 0\n",
@@ -415,6 +440,33 @@
     "\n",
     "plot_history(train_losses, train_f1_scores, val_losses, val_f1_scores)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9801d231-12fd-42b0-923c-fa8db24a3b08",
+   "metadata": {},
+   "source": [
+    "#### Brief Explanation\n",
+    "##### Transformer Model Architecture\n",
+    "For the classification of airline tweets, we chose the BERT (Bidirectional Encoder Representations from Transformers) model. BERT is a transformer-based model that uses a bidirectional approach to pre-train language representations. It is designed to understand the context of a word based on its surroundings both before and after the word, which is achieved through its bidirectional training method. The BERT model consists of multiple layers of encoders, each with self-attention mechanisms, allowing it to capture intricate patterns in the text.\n",
+    "\n",
+    "Fine-tuning is the process of adapting the pretrained transformer model to the specific task of classifying airline tweets allowing it to improve its performance.\n",
+    "\n",
+    "##### Model Modifications\n",
+    "1. **Freezing Layers**: We froze the initial layers of the BERT model that contain general knowledgeand focus on fine-tuning the layers for the specific classification task.\n",
+    "2. **Gradual Unfreezing**: Gradually unfreeze the layers of the Transformer model during training helps in retaining the learned features in the early layers while fine-tuning the higher layers.\n",
+    "3. **Adjusting Learning Rates**: Assign higher learning rates to the top layers and lower learning rates to the bottom layers helped in achieving better performance. This technique, known as layer-wise learning rate decay, ensures that the top layers adapt faster to the specific task.\n",
+    "   \n",
+    "By implementing these modifications, we were able to enhance the performance of the BERT model for the task of airline tweet classification, ensuring accurate and efficient sentiment analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d675ff01-06de-46ff-add1-5fd93e782e61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
