--- a/AirlineTweetsClassificationwithPretrainedTransformer.ipynb
+++ b/AirlineTweetsClassificationwithPretrainedTransformer.ipynb
@@ -515,7 +515,7 @@
    ],
    "source": [
     "def plot_cm(cm):\n",
-    "  sns.heatmap(pd.DataFrame(cm), annot=True, cmap=\"PuBu\" ,fmt='g', xticklabels=['TRUE','FALSE'], yticklabels=['TRUE','FALSE'])\n",
+    "  sns.heatmap(pd.DataFrame(cm), annot=True, cmap=\"PuBu\" ,fmt='g', xticklabels=['Positive','Negative'], yticklabels=['Positive','Negative'])\n",
     "  plt.title('Confusion matrix', y=1.1)\n",
     "  plt.show()\n",
     "\n",
